# Federated-system-for-clinical-data-analysis

./: .dockerignore  .gitignore  README.md  celerybeat-schedule  commands.txt  cookies.txt  docker-compose.yml  manage.py  manual_commands.txt  prez.txt  pubsub.html  pubsub_dashboard.html  pyproject.toml  requirements-ml.txt  requirements.txt  root_with_lang_en.html  todo.txt  z.txt
clinical_ai/: admin.py  apps.py  calibration.py  federated_client.py  federated_model_sync.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
clinical_ai/migrations/: 0001_initial.py  0002_alter_patientclinicalrecord_patient.py  0003_patientclinicalrecord_diabetes_status_and_consent.py  0004_alter_patientclinicalrecord_education_and_more.py  0005_patientclinicalrecord_federated_training_count.py
docker/: =  Dockerfile  Dockerfile.ml  client1.env  client2.env  combined.env  docker-compose.client.yml  docker-compose.yml
federated_server/: .dockerignore  requirements-flower.txt
federated_server/docker/: Dockerfile  docker-compose.yml  minio.license
federated_server/flower_server/: __init__.py  metrics.py  server.py  training_coordinator.py  trigger_training.py
healthcheck/: apps.py  asgi.py  celery.py  metrics.py  middleware.py  settings.py  urls.py  views.py  wsgi.py
machinelearning/: alex-test.ipynb  diabetes-alex.ipynb  diabetes-mustafa.ipynb  diabetes.ipynb  musta-test.ipynb
pubsub/: admin.py  appointment_lifecycle.py  apps.py  forms.py  models.py  redis_pubsub.py  roles.py  security.py  signals.py  tasks.py  urls.py  views.py
pubsub/management/: __init__.py
(+92 files in other folders)
