[tool.poetry]
name = "django-ml-project"
version = "0.1.0"
description = "Federated Learning and Pub/Sub Messaging System with Django and Celery"
authors = ["Ignat Vlad Rovin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "6.0.1"
djangorestframework = "3.16.1"
celery = "5.4.0"
redis = "5.2.1"
psycopg2-binary = "2.9.10"
python-dotenv = "1.1.0"
numpy = "2.1.3"
pandas = "2.2.3"
scikit-learn = "1.6.1"
requests = "2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-django = "^4.8"
black = "^24.0"
flake8 = "^7.0"
ipykernel = "^7.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
